# universal-kiosk

./: .gitignore  README.md  netlify.toml
.github/workflows/: netlify.yml
Django_project/: README.md  init.sh  pyproject.toml
Django_project/app/: models.py  urls.py  views.py
Django_project/app/static/css/: kiosk-main-page.css  kiosk-order-page.css  main.css
Django_project/app/static/js/: script.js
Django_project/conf/: asgi.py  settings.py  urls.py  wsgi.py
Django_project/fixtures/: stuff.json
Django_project/templates/: kiosk-main-page.html  kiosk-order-page.html  main.html
blind-device/: platformio.ini
blind-device/esp8266-recv/src/: main.cpp
blind-device/esp8266-send/src/: main.cpp
blind-device/esp8266/src/: main.cpp
blind-device/esp8266/test/: test.json  test_post.py
blind-device/src/: main.cpp
blind-device/web-controller/: core.py  main.py  pyproject.toml
docs/: designs.md  how-it-works-kr.md
front-end/flask-test/: main.py
front-end/src/routes/: +page.svelte
front-end/src/routes/order/: +page.svelte  _menuItem.svelte
html-css/: kiosk-main-page.css  kiosk-main-page.html  kiosk-order-page.css  kiosk-order-page.html
web/back-end/: main.py  menu.json  pyproject.toml
web/front-end/: netlity.toml  package-lock.json  package.json  svelte.config.js  vite.config.js
web/front-end/flask-test/: data.json  your_data.json
web/front-end/src/: app.html
web/front-end/src/routes/: +page.svelte
web/front-end/src/routes/order/: +page.svelte  _menuItem.svelte
web/front-end/src/routes/thankyou/: +page.svelte
