[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["seonghwan7694 <seonghwan7694@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
