[tool.poetry]
name = "web-controller"
version = "0.1.0"
description = ""
authors = ["krome0 <sealminc@gmail.com>"]
readme = "README.md"
packages = [{include = "web_controller"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
