[tool.poetry]
name = "web-controller"
version = "0.1.0"
description = ""
authors = ["krome0 <sealminc@gmail.com>"]
readme = "README.md"
packages = [{include = "web_controller"}]

[tool.poetry.dependencies]
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
