[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["krome0 <sealminc@gmail.com>"]
readme = "README.md"
packages = [{include = "back_end"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
